Refactor factory helpers and object factories
- replace ConstantFactory with ObjectFactory and add core.utils.Factories helpers
- drop Factory.of static helpers and adjust MappedFactory and tests
- rename SupplierFactories to Factories and update constant suppliers usage
- use ListFactory in SteppableSequenceFactory varargs ctor
- update agent and core tests to use ObjectFactory